kustomize/apps/ble-service/ble-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ble-service
    app.kubernetes.io/component: ble-service
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
  name: ble-service
  namespace: vsaas-vms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ble-service
      app.kubernetes.io/component: ble-service
      app.kubernetes.io/part-of: vms
      global-app-name: vsaas
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ble-service
        app.kubernetes.io/component: ble-service
        app.kubernetes.io/part-of: vms
        global-app-name: vsaas
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: ble-service
                    app.kubernetes.io/component: ble-service
                    app.kubernetes.io/part-of: vms
                    global-app-name: vsaas
                topologyKey: kubernetes.io/hostname
      containers:
        - name: ble-service
          image: download.aipix.ai:8443/ble-service/release:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 150m
              memory: 500Mi
      imagePullSecrets:
        - name: download-aipix-ai
      hostname: ble-service
      restartPolicy: Always
