kustomize/apps/ble-service/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ble-service
    app.kubernetes.io/component: ble-service
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
  name: ble-service
  namespace: vsaas-vms
spec:
  ports:
    - name: "api"
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: "lock"
      port: 6444
      protocol: TCP
      targetPort: 6444
  selector:
    app.kubernetes.io/name: ble-service
    app.kubernetes.io/component: ble-service
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
