kustomize/apps/ble-service/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: ble-service-api
  namespace: vsaas-vms
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host (`example.com`) && (PathPrefix(`/wifi-ota`) || PathPrefix(`/ble`))
      services:
        - kind: Service
          name: ble-service
          port: 8080
          scheme: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: ble-service-lock
  namespace: vsaas-vms
spec:
  entryPoints:
    - ble-service
  routes:
    - match: HostSNI(`example.com`)
      services:
        - name: ble-service
          port: 6444
  tls:
    secretName: certificate
